[package]
name = "gen-combinations"
version = "0.1.0"
authors = ["Kai Page <kai@quantaly.net>"]
edition = "2018"
description = "A general combination generator"
readme = "README.md"
repository = "https://github.com/Quantaly/gen-combinations"
license = "MIT OR Apache-2.0"
keywords = ["combinations"]
categories = ["algorithms"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
version-sync = "0.9"
